[package]
name = "citrus_engine"
description = "The Rust bindings for the Citrus Engine, originally written in C++."
readme = "README.md"
license = "LGPL-2.1-only"
keywords = ["gamedev", "api", "game", "bindings"]
categories = ["api-bindings", "game-engines", "game-development"]
authors = ["Team Citrus"]
version = "0.0.1"
repository = "https://github.com/team-citrus/engine-rust/"
include = ["/src/rs"]

[dependencies]
cxx = "1.0"
glm = "0.2.3"
impls = "1"

[build-dependencies]
cxx-build = "1.0"

[profile.dev]
opt-level = 0
overflow-checks = false
lto = true
debug = true

[profile.release]
opt-level = 2
overflow-checks = false
lto = true

[lib]
name = "engine"
path = "src/lib.rs"
crate-type = ["lib"] 